Fix overflow with  text preview

--- a/src/app/set-preview-card/set-preview-card.component.scss
+++ b/src/app/set-preview-card/set-preview-card.component.scss
@@ -70,6 +70,7 @@
   line-height: 1.2em;
   padding: 4px;
   margin:auto;
+  max-width: 90%;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
